testdata/baselines/reference/submodule/compiler/jsdocReferenceGlobalTypeInCommonJs.errors.txt
a.js(1,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== a.js (1 errors) ====
    const other = require('./other');
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    /** @type {Puppeteer.Keyboard} */
    var ppk;
    Puppeteer.connect;
==== puppet.d.ts (0 errors) ====
    export as namespace Puppeteer;
    export interface Keyboard {
        key: string
    }
    export function connect(name: string): void;
    
==== other.d.ts (0 errors) ====
    declare function f(): string;
    export = f;
    